<resources>
    <string name="app_name">iHomeServices</string>
    <string name="login_hintUsuario">Usuário</string>
    <string name="login_hintSenha">Senha</string>
    <string name="login_btnEntrar">ENTRAR</string>
    <string name="login_lbCadastrar">CADASTRAR</string>
    <string name="login_lbPular">PULAR</string>

    <string name="register_lbNome">Nome</string>
    <string name="register_lbSobrenome">Sobrenome</string>
    <string name="register_lbOficio">Ofício</string>
    <string name="register_lbTipoUsuario">Tipo de usuário</string>
    <string name="register_lbEmail">Email</string>
    <string name="register_lbTelefone">Telefone</string>
    <string name="register_lbPreco">Preço</string>
    <string name="register_rbCliente">Cliente</string>
    <string name="register_rbTrabalhador">Trabalhador</string>

    <string name="workerDetails_fotos">Fotos:</string>
    <string name="workerDetails_nomeSobrenome">Nome Sobrenome</string>
    <string name="workerDetails_preco">Preço:</string>
    <string name="workerDetails_avaliacao">Avaliação:</string>
    <string name="workerDetails_email">Email:</string>
    <string name="workerDetails_telefone">Telefone:</string>
    <string name="workerDetails_oficio">Ofício:</string>
    <string name="workerDetails_avaliar">AVALIAR</string>

    <string name="menu_miMeuPerfil">Meu Perfil</string>
    <string name="menu_btnConfirmar">CONFIRMAR</string>

    <string name="comentarios_btnAvaliar">PUBLICAR AVALIAÇÃO</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
