<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterTipoUsuarioFragment">

    <RadioGroup
        android:id="@+id/rgTipoUsuario"
        android:layout_width="343dp"
        android:layout_height="63dp"
        android:layout_gravity="center"
        android:layout_marginStart="0dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbTipoUsuario">

        <RadioButton
            android:id="@+id/rbTrabalhador"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/register_rbTrabalhador"
            android:textSize="22sp" />

        <RadioButton
            android:id="@+id/rbCliente"
            android:layout_width="129dp"
            android:layout_height="wrap_content"
            android:text="@string/register_rbCliente"
            android:textSize="22sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/lbTipoUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|left"
        android:layout_marginLeft="24dp"
        android:layout_marginBottom="25dp"
        android:text="@string/register_lbTipoUsuario"
        android:textSize="20sp" />

</FrameLayout>