<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".TrabalhadorDetalhesActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lbNomeSobrenome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|top"
                android:layout_marginStart="0dp"
                android:layout_marginTop="10dp"
                android:foregroundGravity="left|center_vertical|clip_horizontal|center|clip_vertical"
                android:text="@string/workerDetails_nomeSobrenome"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/lbOficio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="24dp"
                android:layout_marginTop="20dp"
                android:foregroundGravity="left|center_vertical|clip_horizontal|center|clip_vertical"
                android:text="@string/workerDetails_oficio"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/lbPreco"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="24dp"
                android:layout_marginTop="20dp"
                android:foregroundGravity="left|center_vertical|clip_horizontal|center|clip_vertical"
                android:text="@string/workerDetails_preco"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="0dp"
                android:layout_marginTop="20dp"
                android:foregroundGravity="left|center_vertical|clip_horizontal|center|clip_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lbTelefone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="20dp"
                    android:foregroundGravity="left|center_vertical|clip_horizontal|center|clip_vertical"
                    android:text="@string/workerDetails_telefone"
                    android:textSize="24sp" />

                <ImageButton
                    android:id="@+id/imgBtnLigar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:background="#76FF03"
                    app:srcCompat="@android:drawable/ic_menu_call" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:foregroundGravity="left|center_vertical|clip_horizontal|center|clip_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lbEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="0dp"
                    android:foregroundGravity="left|center_vertical|clip_horizontal|center|clip_vertical"
                    android:text="@string/workerDetails_email"
                    android:textSize="24sp" />

                <ImageButton
                    android:id="@+id/imgBtnEnviar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:background="#00B0FF"
                    app:srcCompat="@android:drawable/ic_menu_send" />
            </LinearLayout>

            <TextView
                android:id="@+id/lbAvaliacao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="24dp"
                android:layout_marginTop="20dp"
                android:foregroundGravity="left|center_vertical|clip_horizontal|center|clip_vertical"
                android:text="@string/workerDetails_avaliacao"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btnAvaliar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="10dp"
                android:text="@string/workerDetails_avaliar"
                android:textSize="20sp" />

        </LinearLayout>

    </ScrollView>

    <GridView
        android:id="@+id/gvFotos"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</androidx.appcompat.widget.LinearLayoutCompat>